refactor(config): 重构表格列配置管理
- 新增 TableColumnConfig 类用于配置表格列
- 更新 GlobalConfig 和 GlobalConfigManager 以使用新的列配置
- 修改 StockConfig 移除未使用的 index 字段
- 更新 DefaultStockConfig.json 添加 maskName 字段